--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+
   db:
     image: postgres:13
     container_name: workshop-db
@@ -8,8 +9,8 @@ services:
       POSTGRES_PASSWORD: oc2024
       POSTGRES_DB: workshopsdb
     volumes:
-      - db_data:/var/lib/postgresql/data
-      - ./db:/db
+      - back_db_data:/var/lib/postgresql/data
+      - ./back/db/db:/docker-entrypoint-initdb.d:ro
     ports:
       - "5432:5432"
     healthcheck:
@@ -18,8 +19,9 @@ services:
       timeout: 5s
       retries: 5
 
-  app:
-    build: .
+  back:
+    build:
+      context: ./back
     container_name: workshop-api
     ports:
       - "8080:8080"
@@ -31,5 +33,14 @@ services:
       db:
         condition: service_healthy
 
+  front:
+    build:
+      context: ./front
+    container_name: olympic-angular
+    ports:
+      - "8081:80"
+
 volumes:
-  db_data:
+  back_db_data:
+
+ 
