Projet 6 | Exercice 2 | Common : Script d'exécution des tests unifié

--- a/back/build.gradle
+++ b/back/build.gradle
@@ -70,6 +70,12 @@ test {
 	testLogging {
 		events "passed", "skipped", "failed"
 	}
+	reports {
+		junitXml.required = true
+		junitXml.outputLocation = file("${rootDir}/test-results")
+		html.required = true
+		html.outputLocation = file("${rootDir}/test-results")
+	}
 }
 
 war {
