--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,50 +11,53 @@ env:
 
 jobs:
 
+  # JOB COMMITLINT
+  commitlint:
+    name: Validate commit messages
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      
+      - name: Install commitlint
+        run: |
+          npm install --save-dev @commitlint/cli @commitlint/config-conventional
+      
+      # Pour les Pull Requests : valide tous les commits de la PR
+      - name: Validate PR commits
+        if: github.event_name == 'pull_request'
+        run: |
+          echo "Validating all commits in the PR..."
+          npx commitlint \
+            --from ${{ github.event.pull_request.base.sha }} \
+            --to ${{ github.event.pull_request.head.sha }} \
+            --verbose
+      
+      # Pour les Push : valide uniquement le dernier commit
+      - name: Validate last commit
+        if: github.event_name == 'push'
+        run: |
+          echo "Validating last commit only..."
+          echo "Commit SHA: ${{ github.sha }}"
+          npx commitlint --from HEAD~1 --to HEAD --verbose
+
   # JOB TESTS
   tests:
     name: Run tests (Back & Front)
     runs-on: ubuntu-latest
-
+    needs: commitlint
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      # Back-end
-      - name: Set up JDK 20
-        if: ${{ hashFiles('back/gradlew') != '' }}
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 20
-          cache: gradle
-
-      # Front-end
-      - name: Set up Node.js
-        if: ${{ hashFiles('front/package.json') != '' }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-          cache-dependency-path: front/package-lock.json
-
-      - name: Install Chrome
-        if: ${{ hashFiles('front/package.json') != '' }}
-        uses: browser-actions/setup-chrome@v1
-
-      - name: Run test script
-        run: |
-          chmod +x run-tests.sh
-          ./run-tests.sh
-
-      - name: Upload test reports
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: |
-            back/test-results
-            front/test-results
 
   # JOB BUILD
   build:
@@ -65,15 +68,14 @@ jobs:
     permissions:
       contents: read
       packages: write
-
-    env:
-      REGISTRY: ghcr.io
-      IMAGE_REPO: ocr-projet-6
-      SHORT_SHA: ${{ github.sha }}
+      id-token: write
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Set safe Docker variables
         run: |
@@ -82,28 +84,55 @@ jobs:
           SAFE_BRANCH="${BRANCH//\//-}"
           echo "SAFE_OWNER=$SAFE_OWNER" >> $GITHUB_ENV
           echo "SAFE_BRANCH=$SAFE_BRANCH" >> $GITHUB_ENV
+          
+          echo "Repository owner: $SAFE_OWNER"
+          echo "Branch: $SAFE_BRANCH"
+          echo "Full SHA: ${{ github.sha }}"
 
-      - name: Login to GHCR
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.APP_SECRET }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build & Push Back image
+      - name: Extract metadata for Back image
+        id: meta-back
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.SAFE_OWNER }}/${{ env.IMAGE_REPO }}/back
+          tags: |
+            type=raw,value=${{ env.SAFE_BRANCH }}-${{ github.sha }}
+
+      - name: Build and push Back image
         uses: docker/build-push-action@v5
         with:
           context: ./back
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.SAFE_OWNER }}/${{ env.IMAGE_REPO }}/back:${{ env.SAFE_BRANCH }}-${{ env.SHORT_SHA }}
+          tags: ${{ steps.meta-back.outputs.tags }}
+          labels: ${{ steps.meta-back.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-      - name: Build & Push Front image
+      - name: Extract metadata for Front image
+        if: hashFiles('front/Dockerfile*') != ''
+        id: meta-front
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.SAFE_OWNER }}/${{ env.IMAGE_REPO }}/front
+          tags: |
+            type=raw,value=${{ env.SAFE_BRANCH }}-${{ github.sha }}
+
+      - name: Build and push Front image
         if: hashFiles('front/Dockerfile*') != ''
         uses: docker/build-push-action@v5
         with:
           context: ./front
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.SAFE_OWNER }}/${{ env.IMAGE_REPO }}/front:${{ env.SAFE_BRANCH }}-${{ env.SHORT_SHA }}
+          tags: ${{ steps.meta-front.outputs.tags }}
+          labels: ${{ steps.meta-front.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   # JOB RELEASE
   release:
@@ -116,39 +145,83 @@ jobs:
       contents: write
       packages: write
       issues: write
+      pull-requests: write
+      id-token: write
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: true
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install semantic-release dependencies
+        run: |
+          npm install --save-dev \
+            semantic-release@^22.0.0 \
+            @semantic-release/changelog@^6.0.0 \
+            @semantic-release/git@^10.0.0 \
+            @semantic-release/github@^9.0.0
 
       - name: Run semantic-release
+        id: semantic
         env:
-          GITHUB_TOKEN: ${{ secrets.APP_SECRET }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx semantic-release
 
-      - name: Tag Docker images with semantic version
-        env:
-          REGISTRY: ghcr.io
-          IMAGE_OWNER: ${{ github.repository_owner }}
-          IMAGE_REPO: ocr-projet-6
-          VERSION: ${{ steps.semantic-release.outputs.newReleaseVersion }}
+      - name: Set safe Docker variables
+        if: steps.semantic.outputs.new-release-published == 'true'
         run: |
-          echo "Tagging Docker images with version $VERSION"
-          docker login $REGISTRY -u $GITHUB_ACTOR -p ${{ secrets.APP_SECRET }}
-          docker pull $REGISTRY/${IMAGE_OWNER}/${IMAGE_REPO}/back:latest
-          docker tag $REGISTRY/${IMAGE_OWNER}/${IMAGE_REPO}/back:latest $REGISTRY/${IMAGE_OWNER}/${IMAGE_REPO}/back:$VERSION
-          docker push $REGISTRY/${IMAGE_OWNER}/${IMAGE_REPO}/back:$VERSION
-          if [ -d front ]; then
-            docker pull $REGISTRY/${IMAGE_OWNER}/${IMAGE_REPO}/front:latest
-            docker tag $REGISTRY/${IMAGE_OWNER}/${IMAGE_REPO}/front:latest $REGISTRY/${IMAGE_OWNER}/${IMAGE_REPO}/front:$VERSION
-            docker push $REGISTRY/${IMAGE_OWNER}/${IMAGE_REPO}/front:$VERSION
+          SAFE_OWNER="${GITHUB_REPOSITORY_OWNER,,}"
+          echo "SAFE_OWNER=$SAFE_OWNER" >> $GITHUB_ENV
+
+      - name: Login to GitHub Container Registry
+        if: steps.semantic.outputs.new-release-published == 'true'
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Tag Docker images with semantic version
+        if: steps.semantic.outputs.new-release-published == 'true'
+        env:
+          VERSION: ${{ steps.semantic.outputs.release-version }}
+        run: |
+          echo "Tagging Docker images with version: $VERSION"
+          
+          # Taguer l'image back
+          echo "Processing back image..."
+          docker pull ${{ env.REGISTRY }}/${{ env.SAFE_OWNER }}/${{ env.IMAGE_REPO }}/back:main-${{ github.sha }}
+          
+          docker tag ${{ env.REGISTRY }}/${{ env.SAFE_OWNER }}/${{ env.IMAGE_REPO }}/back:main-${{ github.sha }} \
+                     ${{ env.REGISTRY }}/${{ env.SAFE_OWNER }}/${{ env.IMAGE_REPO }}/back:$VERSION
+          docker tag ${{ env.REGISTRY }}/${{ env.SAFE_OWNER }}/${{ env.IMAGE_REPO }}/back:main-${{ github.sha }} \
+                     ${{ env.REGISTRY }}/${{ env.SAFE_OWNER }}/${{ env.IMAGE_REPO }}/back:latest
+          
+          docker push ${{ env.REGISTRY }}/${{ env.SAFE_OWNER }}/${{ env.IMAGE_REPO }}/back:$VERSION
+          docker push ${{ env.REGISTRY }}/${{ env.SAFE_OWNER }}/${{ env.IMAGE_REPO }}/back:latest
+          echo "Back image tagged successfully"
+          
+          # Taguer l'image front (si elle existe)
+          echo "Checking for front image..."
+          if docker pull ${{ env.REGISTRY }}/${{ env.SAFE_OWNER }}/${{ env.IMAGE_REPO }}/front:main-${{ github.sha }} 2>/dev/null; then
+            echo "Processing front image..."
+            docker tag ${{ env.REGISTRY }}/${{ env.SAFE_OWNER }}/${{ env.IMAGE_REPO }}/front:main-${{ github.sha }} \
+                       ${{ env.REGISTRY }}/${{ env.SAFE_OWNER }}/${{ env.IMAGE_REPO }}/front:$VERSION
+            docker tag ${{ env.REGISTRY }}/${{ env.SAFE_OWNER }}/${{ env.IMAGE_REPO }}/front:main-${{ github.sha }} \
+                       ${{ env.REGISTRY }}/${{ env.SAFE_OWNER }}/${{ env.IMAGE_REPO }}/front:latest
+            
+            docker push ${{ env.REGISTRY }}/${{ env.SAFE_OWNER }}/${{ env.IMAGE_REPO }}/front:$VERSION
+            docker push ${{ env.REGISTRY }}/${{ env.SAFE_OWNER }}/${{ env.IMAGE_REPO }}/front:latest
+            echo "Front image tagged successfully"
+          else
+            echo "Front image not found, skipping..."
           fi
+          
+          echo "All images tagged with version $VERSION"
