--- a/back/docker-compose.yml
+++ b/back/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_DB: workshopsdb
     volumes:
       - db_data:/var/lib/postgresql/data
-      - ./db:/db
+      - ./db/db:/docker-entrypoint-initdb.d:ro
     ports:
       - "5432:5432"
     healthcheck:
